Ports/jdk/jdk-jdk-18-10/test/langtools/tools/javac/unicode/SupplementaryJavaID5.out
SupplementaryJavaID5.java:14:12: compiler.err.illegal.char: \ud834\udd00
1 error
